import { Color } from "./Color";

export class Combination {
  public static readonly TOTAL_NUM_OF_PEGS = 4;

  protected colors: Color[];

  constructor() {
    this.colors = [];
  }
}
